# mg_gpgpu

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  main.cu  parallel_reduce_benchmark.cu  parallel_scan_benchmark.cu
experiments/: CMakeLists.txt  simple_copy_buffer.cu
lib/: CMakeLists.txt
lib/include/mg_gpgpu/: utils.h
lib/include/mg_gpgpu/core/gpu/: compact.h  histogram.h  reduce.h  scan.h
lib/src/: dummy.cpp
mg_gpgpu_core/: CMakeLists.txt
mg_gpgpu_core/include/mg_gpgpu_core/: compact.h  dummy.h  histogram.h  parallel_reduce.h  parallel_scan.h  reduce.h  scan.h  temp.txt  utils.h
mg_gpgpu_core/src/: dummy.cpp  main.cpp  parallel_reduce.cu
mg_gpu_core/src/: main.cpp
tests/: .CMakeLists.txt.swp  CMakeLists.txt  compact_test.cu  dummyTests.cpp  parallel_reduce_test.cu  parallel_scan_tests.cu  utils_tests.cu
